[package]
name = "reth-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
# General
once_cell = "1.17.0"
eyre = "0.6.8"
tokio = { version = "1.21", default-features = false, features = ["sync"] }
futures = "0.3.26"
chrono = "0.4.31"
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

# Reth
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }
reth-network = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }
reth-dns-discovery = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }
reth-ecies = { git = "https://github.com/paradigmxyz/reth.git", branch = "main" }

# aws
aws-config = { version = "0.56.1" }
aws-sdk-dynamodb = { version = "0.33.0" }
# Serialization
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }

# misc
ipgeolocate = "0.3.5"
clap = { version = "4.4.6", features = ["derive"] }
