[workspace]
resolver = "2"

members = ["bins/*", "db"]

[workspace.dependencies]
# reth
reth-primitives = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt" }
reth-network = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt" }
reth-discv4 = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt" }
reth-dns-discovery = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt" }
reth-eth-wire = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt" }
reth-ecies = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt" }
reth-provider = { git = "https://github.com/0xprames/reth.git", branch = "discv4-recv-preempt", features = [
    "test-utils",
] }

# serialization
clap = { version = "4.4.6", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0.188", features = ["derive"] }

# general
lru = "0.12.0"
async-trait = "0.1.74"
once_cell = "1.17.0"
eyre = "0.6.8"
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.21", default-features = false, features = [
    "full",
    "tracing",
] }
tokio-stream = "0.1.14"
futures = "0.3.26"
chrono = "0.4.31"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0.50"
console-subscriber = "0.2.0"

# crypto
secp256k1 = { version = "0.27.0", default-features = false, features = [
    "global-context",
    "rand-std",
    "recovery",
] }

# aws
aws-config = { version = "0.56.1" }
aws-sdk-dynamodb = { version = "0.33.0" }

# sqlite
tokio-rusqlite = "0.4.0"
