[package]
name = "reth-crawler-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# reth
reth-primitives.workspace = true

# aws
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true

# general
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
eyre.workspace = true
tracing.workspace = true
chrono.workspace = true

# serialization
serde_json.workspace = true
serde.workspace = true

# sqlite
tokio-rusqlite.workspace = true

# postgresql
tokio-postgres.workspace = true
