[package]
name = "reth-crawler-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# aws
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true

# general
axum = { version = "0.6.4", features = ["macros"] }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

# serialization
serde.workspace = true

# db
reth-crawler-db = { path = "../../db" }
