[package]
name = "reth-crawler-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# aws
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true

# general
clap.workspace = true
chrono.workspace = true
axum = { version = "0.6.4", features = ["macros","headers"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# serialization
serde.workspace = true

# db
reth-crawler-db = { path = "../../db" }
