[package]
name = "reth-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]

# db
reth-crawler-db = { path = "../../db" }

# Reth
reth-primitives.workspace = true
reth-network.workspace = true
reth-discv4.workspace = true
reth-dns-discovery.workspace = true
reth-eth-wire.workspace = true
reth-ecies.workspace = true
reth-provider.workspace = true

# Serialization
serde_json.workspace = true
serde.workspace = true

# general
lru.workspace = true
clap.workspace = true
ethers.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing-subscriber.workspace = true
console-subscriber.workspace = true
tracing.workspace = true
ipgeolocate.workspace = true
eyre.workspace = true
futures.workspace = true
chrono.workspace = true
once_cell.workspace = true

# crypto
secp256k1.workspace = true
